# libfoo

./: BUILD.bazel  MODULE.bazel  README.md  go.mod  libfoo.go  libfoo_test.go
proto/v1/: BUILD.bazel  foo.proto
proto/v1/foo/: BUILD.bazel  empty.go
